# STA4101

./: README.md  cleaned_shelter_usage.parquet  shelter_usage.parquet  slides-cleveland.qmd
sta4101/: cleaned_shelter_usage.parquet  pyvenv.cfg  shelter_usage.parquet  simulated_data.parquet
week_1/: 00-simulate_data.py  01-read_parquet.py  02-download_data.py  03-clean.py  04-explore.py  05-graph.py  cleaned_shelter_usage.parquet  demo.qmd  example.py  hello.py  pyproject.toml  references.bib  shelter_usage.parquet  simulated_data.parquet  slides-version_control.html  slides-version_control.qmd  slides.html  slides.qmd  tempCodeRunnerFile.py  worksheet.qmd
week_2/: demo.qmd  plot.py  pyproject.toml  references.bib  slides-Tufte.qmd  slides-healy.qmd  slides.html  slides.qmd  slides_Tukey.html  slides_Tukey.qmd  worksheet.qmd
